src/objects/CD_Demand__c.object
<CustomObject>
    <fields>
        <fullName>APC_Description__c</fullName>
        <formula>CD_APC_CODE__r.APC_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>APC Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_APC_CODE_IOD_IN__c</fullName>
        <label>CD APC CODE IOD IN</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CD_APC_CODE__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>CD APC CODE</label>
        <referenceTo>CD_APC__c</referenceTo>
        <relationshipLabel>CD Demand</relationshipLabel>
        <relationshipName>CD_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Demand_ID__c</fullName>
        <externalId>true</externalId>
        <label>Demand_ID</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Demand_Month__c</fullName>
        <label>Demand_Month</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Demand_Qty__c</fullName>
        <label>Demand Qty</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Key_Account_IOD_IN__c</fullName>
        <label>Key Account IOD IN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Key Account</label>
        <referenceTo>Key_Account__c</referenceTo>
        <relationshipLabel>CD Demand</relationshipLabel>
        <relationshipName>CD_Demand1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Num_IOD_IN__c</fullName>
        <label>Product Num IOD IN</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Num__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Num</label>
        <referenceTo>CD_Items__c</referenceTo>
        <relationshipLabel>CD Demand</relationshipLabel>
        <relationshipName>CD_Demand</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product_Type__c</fullName>
        <label>Product Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>snapshot_Date__c</fullName>
        <label>snapshot Date</label>
        <type>Date</type>
    </fields>
    <label>CD Demand</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>CD Demand Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CD Demand</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>